# RustHardwareProfiler

./: .gitignore  Cargo.toml  README.md  cspell.json  sample-output.txt
src/: error.rs  main.rs  report.rs
src/collectors/: cpu.rs  gpu.rs  installed.rs  memory.rs  mod.rs  motherboard.rs  network.rs  os.rs  runtimes.rs  storage.rs  temperatures.rs
